--- a/app/assets/stylesheets/main/main_footer.scss
+++ b/app/assets/stylesheets/main/main_footer.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 
   width:100%;
-  height: 60px;
+  height: 55px;
 
   bottom: 0;
   background-color: $flock-darkgrey;
@@ -15,11 +15,11 @@
     justify-content: center;
 
     .github {
-      margin: 20px;
+      margin: 15px;
       color: white;
     }
     .linkedin {
-      margin: 20px;
+      margin: 15px;
       color: white;
     }
     a {
